<resources>
    <string name="app_name">MainApp Validator</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Correo</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Acceder</string>
    <string name="action_sign_in_short">Registrarse</string>
    <string name="error_invalid_email">El correo es inválido</string>
   <string name="error_password_mismatch">Las Contraseñas no coinciden</string>
    <string name="error_invalid_password">La Contraseña es muy corta</string>
    <string name="error_incorrect_password">La Contraseña es incorrecta</string>
    <string name="error_field_required">El campo es requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>
    <string name="title_activity_maps">Buscar</string>
    <string name="title_activity_nav">NavActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps_dir">Dirección</string>
    <string name="pass_lost">¿Olvidó su contraseña?</string>
    <string-array name="Generos">
        <item>Todos</item>
        <item>Femenino</item>
        <item>Masculino</item>
    </string-array>
    <string-array name="Rate">
        <item>Todos</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="Servicios">
        <item>Todos</item>
        <item>VIP</item>
        <item>Estilista</item>
        <item>Barbero</item>
    </string-array>
    <string-array name="Niveles">
        <item></item>
         <item>VIP</item>
        <item>STD</item>
        <item>Nivel 3</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="conf_password">Confirmar Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="pass">¿Olvidó su contraseña?</string>

</resources>
