<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical"
    android:verticalScrollbarPosition="right">

    <!-- Login progress -->

    <ImageView
        android:id="@+id/ftop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fup" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:adjustViewBounds="false"
        android:scaleX="0.7"
        android:scaleY="0.7"
        app:layout_constraintBottom_toTopOf="@+id/email_login_form"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ftop"
        app:srcCompat="@drawable/logo" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp">

    </ScrollView>

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="0dp"
        android:layout_height="320dp"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login_form">


        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:background="@drawable/roundesd_white"
            android:drawablePadding="16dp"
            android:drawableStart="@android:drawable/sym_action_email"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:singleLine="true"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textColorHint="@color/Verde"
            android:textColorLink="@color/Magent"
            android:textSize="14sp"
            android:textStyle="italic" />


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/roundesd_white"
            android:drawablePadding="20dp"
            android:drawableStart="@android:drawable/ic_lock_idle_lock"
            android:hint="@string/prompt_password"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:singleLine="true"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textColorHint="@color/Verde"
            android:textColorLink="@color/Magent"
            android:textSize="14sp"
            android:textStyle="italic" />


        <CheckBox
            android:id="@+id/checkBoxR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:text="Recordar datos"
            android:textAlignment="viewStart"
            android:textColor="@color/Verde"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/pass_lost"
            android:textAlignment="textStart"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/email_sign_in_button"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginEnd="100dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rouded_white_2"
            android:backgroundTint="@color/Magent3"
            android:backgroundTintMode="src_in"
            android:text="@string/action_sign_in"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textColorLink="@color/Magent2"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/registrar"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginEnd="120dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rouded_white_2"
            android:backgroundTint="@color/Magent3"
            android:backgroundTintMode="src_in"
            android:enabled="false"
            android:text="@string/action_sign_in_short"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textColorLink="@color/Magent2"
            android:textSize="12sp"
            android:textStyle="italic" />

    </LinearLayout>

    <ImageView
        android:id="@+id/fdown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/fdown" />

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/email_login_form"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logo" />

</android.support.constraint.ConstraintLayout>
